upwork-devs/susanta-gautam/minio-traffic-generator/minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-one
  namespace: minio-one
spec:
  selector:
    matchLabels:
      app: minio-one
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-one
    spec:
      containers:
      - name: minio-one
        image: minio/minio:RELEASE.2020-05-01T22-19-14Z
        args:
        - server
        - /data
        ports:
        - containerPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-two
  namespace: minio-two
spec:
  selector:
    matchLabels:
      app: minio-two
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-two
    spec:
      containers:
      - name: minio-two
        image: minio/minio:RELEASE.2020-05-01T22-19-14Z
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
