upwork-devs/susanta-gautam/minio-traffic-generator/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-one
  namespace: minio-one
  labels:
    service: minio-one
spec:
  selector:
    app: minio-one
  ports:
    - name: http
      port:  9000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: minio-two
  namespace: minio-two
  labels:
    service: minio-two
spec:
  selector:
    app: minio-two
  ports:
    - name: http
      port:  9000
  type: ClusterIP
