upwork-devs/susanta-gautam/minio-traffic-generator/minio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-one-ingress
  namespace: minio-one
spec:
  rules:
    - host: minio-one.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-one 
              servicePort: 9000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-two-ingress
  namespace: minio-two
spec:
  rules:
    - host: minio-two.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-two
              servicePort: 9000
