upwork-devs/susanta-gautam/minio-traffic-generator/minio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-one
  namespace: minio-one
spec:
  hosts:
    - minio-one.example.com
  gateways:
    - istio-system/minio
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9000
            host: minio-one


---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-two
  namespace: minio-two
spec:
  hosts:
    - minio-two.example.com
  gateways:
    - istio-system/minio
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9000
            host: minio-two
